--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 
 *, *:before, *:after {
    box-sizing: border-box;
+   margin: 0;
 }
 
 body,td,th,p{
@@ -15,6 +16,7 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+  max-width: 1000px;
 
 }
 ul, li {
@@ -58,11 +60,49 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 
 /******  Grids  *******************************************/
-.container, .search-wrapper {
+.container {
   margin: 0 auto 0 auto;
   flex-direction: row;
 }
 
+.search-wrapper {
+  margin: 0 auto 0 auto;
+
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows:  auto;
+  display: inline-grid;
+  width: 100%;
+  grid-template-areas:
+    "filterv filterv filterv mapv mapv"
+    "review review review mapv mapv";
+}
+
+.item-filter {
+/*  grid-column-start: 1;
+  grid-column-end: 4;*/
+  /*width: 50%;*/
+  grid-area: filterv;
+}
+
+.item-map {
+    /*grid-column-start: 4;*/
+  /*grid-column-end: 2;*/
+  /*grid-row-start: 1 span 2;*/
+  /*width: 50%;*/
+  grid-area: mapv;
+
+}
+
+
+
+
+.item-review {
+   /* grid-column-start: 1;
+  grid-column-end: 4;*/
+  /*grid-row-start: 2;*/
+  /*width: 50%;*/
+  grid-area: review;
+}
 .row {
   width: 100%;
   display: flex;
@@ -158,12 +198,23 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
-#map, .search-map {
-  height: 400px;
+#map {
+/*  height: 400px;
   width: 100%;
-  background-color: #ccc;
+  background-color: #ccc;*/
 }
 
+.search-map {
+   /*padding: 0 0 0 10px;*/
+  /*border-top: 1px solid #fff;*/
+  /*width: 50%;*/
+ /*align-self: flex-start;*/
+  /*border-top: 1px solid #fff;*/
+  /*margin: 0 0 0 10px;*/
+   height: 80vh;
+  width: 100%;
+
+}
 
 /*-----  rest list --------------------------------*/
 
@@ -186,6 +237,8 @@ nav h1 a {
 grid-template-columns: 1fr 3fr;
 /*grid-template-rows: 3fr;*/
   /*height: 150px;*/
+  overflow-y: auto;
+  max-height: 800px;
 }
 
 .rest-list-rest {
@@ -216,16 +269,20 @@ grid-template-columns: 1fr 3fr;
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
   width: 100%;
   height: auto;   /*60px;*/
+  /*max-height: 100px;*/
   background-color:    #3397DB;
   align-items: center;
-  padding: 20px 0 0 ;
+  /*padding: 20px 0 0 ;*/
 
 
 }
 .filter-box {
-  margin: 0 auto 20px ;
+  /*margin: 0 auto 20px ;*/
+  /*width: 50%;*/
+
 }
 .filter-options h2 {
   color: white;
@@ -326,6 +383,8 @@ header {
   align-self: flex-start;
   /*border-top: 1px solid #fff;*/
   margin: 15px 0 0;
+  height: 400px;
+  width: 100%;
 
 }
 
@@ -423,6 +482,35 @@ header {
 }
 
 
+
+@media screen and (max-width: 799px) {    /*main page*/
+
+            .search-wrapper {
+
+
+              grid-template-areas:
+                "filterv filterv filterv filterv filterv"
+                "mapv mapv mapv mapv mapv"
+                "review review review review review";
+            }
+
+
+            .search-map {
+               height: 50vh;
+              width: 100%;
+            }
+
+              .rest-list-wrapper {
+
+                overflow-y: hidden;
+
+
+              }
+
+}
+
+
+
     @media screen and (max-width: 480px) {
       .restaurant-container {
         width: 100%;
@@ -432,15 +520,20 @@ header {
         margin: 0;
       }
 
-  /*    .filter-box {
-        width: 100%;
+      .filter-options {
+        display: inline-grid;
+        padding: 10px 0;
       }
-*/
+
 
       .filter-options select {
-        margin: 0 20px;
+        margin: 10px auto;
       }
+.filter-box {
+display: grid;
+/*width: auto;*/
 
+}
 
 
       .rest-list-img {
