details page - fix @media css

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,10 +119,13 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 .detail-details {
   grid-area: details;
+  padding: 0 20px 30px;
 }
 
 .detail-map {
   grid-area: map;
+  margin: 15px 0 0;
+  padding: 0 20px 30px;
 }
 
 .detail-review {
@@ -403,16 +406,14 @@ header {
   width: 100%;*/
 }
 
-.map--cont {
-/*  width: 100%;
-  height: 100%;*/
+/*.map--cont {
+
   align-self: flex-start;
-  /*border-top: 1px solid #fff;*/
   margin: 15px 0 0;
   height: 400px;
   width: 100%;
 
-}
+}*/
 
 .inside #footer {
   bottom: 0;
@@ -463,7 +464,7 @@ header {
 }
 
 .restaurant-container {
-  padding: 0 20px 30px;
+  /*padding: 0 20px 30px;*/
   /*border-top: 1px solid #fff;*/
   /*width: 50%;*/
 
@@ -472,7 +473,7 @@ header {
 
 .reviews-container {
   border-top: 1px solid #fff;
-    padding: 30px 20px 80px;
+    padding: 0 20px 0;
   width: 100%;
 }
 
@@ -531,6 +532,13 @@ header {
                 overflow-y: hidden;
 
 
+              }
+
+              .detail-wrapper {
+                  grid-template-areas:
+    "details details details details"
+    "map map map map"
+    "review review review review";
               }
 
 }
