--- a/css/styles.css
+++ b/css/styles.css
@@ -385,6 +385,21 @@ grid-template-columns: 1fr 3fr;
   text-transform: uppercase;
 }
 
+#restaurants-list li button {
+  background-color: orange;
+  border-bottom: 3px solid #eee;
+  color: #fff;
+  display: inline-block;
+  font-size: 10pt;
+  margin: 15px 0 0;
+  padding: 8px 30px 10px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+
+
 /* ====================== Restaurant Details ====================== */
 header {
   /*position: fixed;*/
