--- a/css/styles.css
+++ b/css/styles.css
@@ -526,6 +526,10 @@ header {
   color: #666;
 }
 
+.hidden-element {
+  left: -200px;
+  position: relative;
+}
 
 
 @media screen and (max-width: 799px) {    /*main page*/
