--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,14 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   grid-column-end: 4;*/
   /*width: 50%;*/
   grid-area: filterv;
+
+    display: flex;
+  width: 100%;
+  height: auto;   /*60px;*/
+  /*max-height: 100px;*/
+  background-color:    #3397DB;
+  align-items: center;
+  /*padding: 20px 0 0 ;*/
 }
 
 .search-map-grid {
@@ -298,13 +306,7 @@ grid-template-columns: 1fr 3fr;
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  display: flex;
-  width: 100%;
-  height: auto;   /*60px;*/
-  /*max-height: 100px;*/
-  background-color:    #3397DB;
-  align-items: center;
-  /*padding: 20px 0 0 ;*/
+
 
 
 }
@@ -313,14 +315,14 @@ grid-template-columns: 1fr 3fr;
   /*width: 50%;*/
 
 }
-.filter-options h2 {
+.search-filter h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
 }
-.filter-options select {
+.search-filter select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
@@ -568,7 +570,7 @@ header {
 
 
     @media screen and (max-width: 480px) {
-      .restaurant-container {
+      .detail-details {
         width: 100%;
       }
 
